Fixing bug 259117. Prevent popups when closing a window even if the close came from a user action that would normally enable popups. r=bzbarsky@mit.edu, sr=brendan@mozilla.org